--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,8 @@
     "behat/behat": "^3.0",
     "medology/flexible-mink": "dev-master",
     "behat/mink-extension": "^2.0",
-    "symfony/config": "~2.8"
+    "symfony/config": "~2.8",
+    "vlucas/phpdotenv": "^2.3"
   },
   "require-dev":{
     "behat/mink-selenium2-driver": "*"
@@ -18,4 +19,3 @@
     }
   }
 }
-
