--- a/composer.json
+++ b/composer.json
@@ -7,10 +7,10 @@
     "behat/behat": "^3.0",
     "medology/flexible-mink": "dev-master",
     "behat/mink-extension": "^2.0",
-    "symfony/config": "~2.8",
-    "vlucas/phpdotenv": "^2.3"
+    "symfony/config": "~2.8"
   },
   "require-dev":{
+    "vlucas/phpdotenv": "^2.3",
     "behat/mink-selenium2-driver": "*"
   },
   "autoload": {
