--- a/package.json
+++ b/package.json
@@ -3,9 +3,7 @@
   "version": "1.0.0",
   "description": "Mink extension for [Google Place Autocomplete](https://developers.google.com/maps/documentation/javascript/examples/places-autocomplete-addressform)",
   "main": "web/index.php",
-  "devDependencies": {
-    "bower": "^1.7.9"
-  },
+  "devDependencies": {},
   "repository": {
     "type": "git",
     "url": "git+https://github.com/Medology/behat-google-place-autocomplete.git"
@@ -16,5 +14,16 @@
     "url": "https://github.com/Medology/behat-google-place-autocomplete/issues"
   },
   "homepage": "https://github.com/Medology/behat-google-place-autocomplete#readme",
-  "private": true
+  "private": true,
+  "dependencies": {
+    "@bower_components/foundation-sites": "zurb/foundation-sites#^6.2.3",
+    "@bower_components/jquery": "jquery/jquery-dist#>= 3.0.0",
+    "@bower_components/what-input": "ten1seven/what-input#~4.1.3"
+  },
+  "engines": {
+    "yarn": ">= 1.0.0"
+  },
+  "scripts": {
+    "postinstall": "node -e \"try { require('fs').symlinkSync(require('path').resolve('node_modules/@bower_components'), 'web/bower_components', 'junction') } catch (e) { }\""
+  }
 }
