--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -1,26 +1,16 @@
 version: '2'
 
 services:
-  app:
-    image: php:7.0-fpm
-    volumes:
-      - ..:/data
-    env_file: .env
-
   web:
-    image: php:7-apache
-    depends_on:
-      - app
-    links:
-      - app
+    image: nginx:1.13.6-alpine
     volumes:
-      - ..:/data
-      - ../web:/var/www/html
-      - ../docker/.env:/var/www/html/.env
-      - ../vendor:/var/www/html/vendor
+      - ..:/usr/share/nginx
+      - ../web:/usr/share/nginx/html
     env_file: .env
     ports:
       - 80:80
+    environment:
+      - NGINX_PORT=80
 
   chrome:
     image: selenium/standalone-chrome-debug:2.53.0
