--- a/behat.yml
+++ b/behat.yml
@@ -2,7 +2,9 @@ default:
   suites:
     default:
       path: %paths.base%/features
-      contexts: [WebContext]
+      contexts:
+        - WebContext
+        - Medology\Behat\StoreContext
   extensions:
     Behat\MinkExtension:
       base_url: http://behatgoogleplaceautocomplete.local/
@@ -13,4 +15,4 @@ default:
           selenium2:
             browser: chrome
             wd_host: http://chrome:4444/wd/hub
-    Behat\ParallelWorker\ServiceContainer\ParallelWorkerExtension: ~
+    Medology\Behat\ParallelWorker\Extension: ~
