--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -13,7 +13,7 @@ services:
       - NGINX_PORT=80
 
   chrome:
-    image: selenium/standalone-chrome-debug:2.53.0
+    image: selenium/standalone-chrome-debug:3.7.0-arsenic
     depends_on:
       - web
     environment:
