Updated src to new Behat standards
I thought my last PR had already done this, but apparently I had only updated the bootstrap Context >.<

I converted the GooglePlaceAutocompleteContext from a trait to a class, and updated the related config/classes accordingly.

--- a/behat.yml
+++ b/behat.yml
@@ -3,7 +3,8 @@ default:
     default:
       path: %paths.base%/features
       contexts:
-        - WebContext
+        - Medology\Behat\GooglePlaceAutocomplete\Contexts\GooglePlaceAutocompleteContext
+        - Medology\Behat\Mink\FlexibleContext
         - Medology\Behat\StoreContext
   extensions:
     Behat\MinkExtension:
