Resolve PHPStorm warnings

--- a/behat.yml
+++ b/behat.yml
@@ -3,7 +3,7 @@ default:
     default:
       path: %paths.base%/features
       contexts:
-        - Medology\Behat\GooglePlaceAutocomplete\Contexts\GooglePlaceAutocompleteContext
+        - Medology\Behat\GooglePlaceAutoComplete\Contexts\GooglePlaceAutoCompleteContext
         - Medology\Behat\Mink\FlexibleContext
         - Medology\Behat\StoreContext
   extensions:
