--- a/composer.json
+++ b/composer.json
@@ -14,8 +14,10 @@
     "behat/mink-selenium2-driver": "*"
   },
   "autoload": {
-    "psr-4": {
-      "Medology\\": "src/"
+    "psr-0": {
+      "": [
+        "src/"
+      ]
     }
   },
   "repositories": [
