--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,7 @@
   "license": "MIT",
   "require": {
     "behat/behat": "^3.0",
-    "medology/flexible-mink": "2.0.x-dev",
+    "medology/flexible-mink": "~2.0",
     "behat/mink-extension": "^2.0",
     "symfony/config": "~2.8"
   },
