Code review changes

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -58,13 +58,11 @@ jobs:
     machine:
       enabled: true
     environment:
+      - USE_PHP5: true
       - PATH: /opt/circleci/.pyenv/shims:./bin:./node_modules/.bin:./vendor/bin:/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin
 
     steps:
       - prep
-      - run:
-          name: Switch image definitions to PHP 5
-          command: rm bin/lib/images.sh && mv bin/lib/images-php5.sh bin/lib/images.sh
       - test
 
 workflows:
