--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -41,7 +41,7 @@ commands:
 
 jobs:
   test:
-    working_directory: /tmp/spinify-php-client
+    working_directory: /tmp/behat-google-place-autocomplete
     parallelism: 1
     machine:
       enabled: true
@@ -53,7 +53,7 @@ jobs:
       - test
 
   test-php5:
-    working_directory: /tmp/spinify-php-client
+    working_directory: /tmp/behat-google-place-autocomplete
     parallelism: 1
     machine:
       enabled: true
