Add CircleCi status check to pullapprove configuration

--- a/.pullapprove.yml
+++ b/.pullapprove.yml
@@ -22,3 +22,9 @@ pullapprove_conditions:
   - condition: "'continuous-integration/styleci/pr' in statuses.succeeded or 'Force Review' in labels"
     unmet_status: pending
     explanation: "StyleCI must pass before requesting review"
+  - condition: "'ci/circleci: test' in statuses.succeeded or 'Force Review' in labels"
+    unmet_status: pending
+    explanation: "ci/circleci: test must pass before requesting review"
+  - condition: "'ci/circleci: test-php5' in statuses.succeeded or 'Force Review' in labels"
+    unmet_status: pending
+    explanation: "ci/circleci: test-php5 must pass before requesting review"
